--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Copyright (C) 2009 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="im_label">"Chat"</string>
@@ -22,6 +36,8 @@
     <string name="menu_invite_contact">"Einladen..."</string>
     <string name="menu_switch_chats">"Chat wechseln"</string>
     <string name="menu_insert_smiley">"Smiley einfügen"</string>
+    <!-- no translation found for menu_plus (5000617247235760106) -->
+    <skip />
     <string name="default_input_title">"Eingabe"</string>
     <string name="confirm">"Bestätigen"</string>
     <string name="confirm_delete_contact">"Kontakt \"<xliff:g id="USER">%1$s</xliff:g>\" wird gelöscht."</string>
@@ -101,6 +117,8 @@
     <string name="empty_chat_list">"Keine aktiven Chats"</string>
     <string name="add_contact_title">"Kontakt hinzufügen"</string>
     <string name="input_contact_label">"E-Mail-Adresse der Person, die Sie einladen möchten:"</string>
+    <!-- no translation found for choose_list_label (1430489448508574145) -->
+    <skip />
     <string name="invite_instruction">"Geben Sie einen Namen ein, der aus den Kontakten hinzugefügt werden soll."</string>
     <string name="invite_label">"Einladung senden"</string>
     <string name="setting_title">"Allgemeine Einstellungen"</string>
