--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Copyright (C) 2009 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="im_label">"即時訊息"</string>
@@ -22,6 +36,8 @@
     <string name="menu_invite_contact">"邀請…"</string>
     <string name="menu_switch_chats">"切換交談"</string>
     <string name="menu_insert_smiley">"插入表情符號"</string>
+    <!-- no translation found for menu_plus (5000617247235760106) -->
+    <skip />
     <string name="default_input_title">"輸入"</string>
     <string name="confirm">"確認"</string>
     <string name="confirm_delete_contact">"「<xliff:g id="USER">%1$s</xliff:g>」會被刪除。"</string>
@@ -101,6 +117,8 @@
     <string name="empty_chat_list">"沒有交談"</string>
     <string name="add_contact_title">"新增連絡人"</string>
     <string name="input_contact_label">"您要邀請的對象電子郵件地址："</string>
+    <!-- no translation found for choose_list_label (1430489448508574145) -->
+    <skip />
     <string name="invite_instruction">"輸入連絡人姓名。"</string>
     <string name="invite_label">"傳送邀請"</string>
     <string name="setting_title">"一般設定"</string>
