--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -31,13 +31,12 @@
     <string name="menu_invite_contact">"Inviter…"</string>
     <string name="menu_switch_chats">"Bytt mellom samtaler"</string>
     <string name="menu_insert_smiley">"Sett inn smilefjes"</string>
-    <!-- no translation found for menu_plus (5000617247235760106) -->
-    <skip />
+    <string name="menu_plus">"Meny+"</string>
     <string name="default_input_title">"Inndata"</string>
     <string name="confirm">"Bekreft"</string>
-    <string name="confirm_delete_contact">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" vil bli slettet."</string>
-    <string name="confirm_block_contact">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" vil bli blokkert."</string>
-    <string name="confirm_unblock_contact">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" vil bli avblokkert."</string>
+    <string name="confirm_delete_contact">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" vil bli slettet."</string>
+    <string name="confirm_block_contact">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" vil bli blokkert."</string>
+    <string name="confirm_unblock_contact">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" vil bli avblokkert."</string>
     <string name="ok">"OK"</string>
     <string name="cancel">"Avbryt"</string>
     <string name="yes">"OK"</string>
@@ -50,7 +49,7 @@
     <string name="remember_password">"Husk passord."</string>
     <string name="keep_me_signed_in">"Logg inn automatisk."</string>
     <string name="sign_up">"Mangler du konto?"</string>
-    <string name="check_auto_sign_in">"Dette valget logger deg automatisk inn hver gang du åpner applikasjonen. For å avmerke valget, logg ut og fjern så haken ved \\\"Logg inn automatis\\\"."</string>
+    <string name="check_auto_sign_in">"Dette valget logger deg automatisk inn hver gang du åpner applikasjonen. For å avmerke valget, logg ut og fjern så haken ved \\\\\\\"Logg inn automatis\\\\\\\"."</string>
     <string name="sign_in">"Logg inn"</string>
     <string name="signing_in_to">"Logger inn på <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait">"Logger inn…"</string>
@@ -90,6 +89,8 @@
     <string name="save">"Save"</string>
     <string name="chat_with">"Samtale med <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Meg"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> er tilgjengelig"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> er borte"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> er opptatt"</string>
@@ -107,8 +108,7 @@
     <string name="empty_chat_list">"Ingen aktive samtaler."</string>
     <string name="add_contact_title">"Legg til kontakt"</string>
     <string name="input_contact_label">"E-postadresse til den du ønsker å invitere:"</string>
-    <!-- no translation found for choose_list_label (1430489448508574145) -->
-    <skip />
+    <string name="choose_list_label">"Velg en liste:"</string>
     <string name="invite_instruction">"Skriv inn et navn som skal legges til fra kontaktene."</string>
     <string name="invite_label">"Send invitasjon"</string>
     <string name="setting_title">"Generelle innstillinger"</string>
@@ -135,10 +135,10 @@
     <string name="subscription_notify_text">"Ny venneinvitasjon fra <xliff:g id="USER">%s</xliff:g>"</string>
     <string name="notify_groupchat_label">"Invitasjon til gruppesamtale"</string>
     <string name="group_chat_invite_notify_text">"Ny invitasjon til gruppesamtale fra <xliff:g id="USER">%s</xliff:g>"</string>
-    <string name="add_contact_success">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" ble lagt til."</string>
-    <string name="delete_contact_success">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" ble slettet."</string>
-    <string name="block_contact_success">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" ble blokkert."</string>
-    <string name="unblock_contact_success">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" ble avblokkert."</string>
+    <string name="add_contact_success">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" ble lagt til."</string>
+    <string name="delete_contact_success">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" ble slettet."</string>
+    <string name="block_contact_success">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" ble blokkert."</string>
+    <string name="unblock_contact_success">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" ble avblokkert."</string>
     <string name="perm_label">"start lynmeldingstjeneste"</string>
     <string name="perm_desc">"Tillater applikasjoner å starte lynmeldingstjenesten."</string>
     <string name="error">"NB"</string>
@@ -152,7 +152,7 @@
     <string name="load_contact_list_failed">"Kontaktlisten ble ikke lastet."</string>
     <string name="cant_connect_to_server">"Kan ikke koble til tjeneren. Sjekk tilkoblingen."</string>
     <string name="contact_already_exist">"<xliff:g id="USER">%1$s</xliff:g> finnes allerede i kontaktlisten."</string>
-    <string name="contact_blocked">"Kontakten \\\"<xliff:g id="USER">%1$s</xliff:g>\\\" er nå blokkert."</string>
+    <string name="contact_blocked">"Kontakten \\\\\\\"<xliff:g id="USER">%1$s</xliff:g>\\\\\\\" er nå blokkert."</string>
     <string name="contact_not_loaded">"Vent mens kontaktlisten lastes."</string>
     <string name="network_error">"Det oppsto en nettfeil."</string>
     <string name="service_not_support">"Tjeneren støtter ikke denne funksjonen."</string>
@@ -204,8 +204,8 @@
     <item>":-!"</item>
     <item>":-["</item>
     <item>"O:-)"</item>
-    <item>":-\\\\"</item>
-    <item>":\\\'("</item>
+    <item>":-\\\\\\\\"</item>
+    <item>":\\\\\\\'("</item>
     <item>":-X"</item>
     <item>":-D"</item>
     <item>"o_O"</item>
