--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"Speichern"</string>
     <string name="chat_with">"Mit <xliff:g id="USER">%1$s</xliff:g> chatten"</string>
     <string name="me">"Eigene"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> ist online."</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> ist abwesend."</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> ist beschäftigt."</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> ist offline."</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> hat Teilnahme begonnen."</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> hat Chat verlassen."</string>
-    <string name="time_stamp">"\'Gesendet\' hh:mm a \'am\' EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"Senden"</string>
     <string name="msg_sent_failed">"Die Nachricht kann nicht gesendet werden."</string>
     <string name="disconnected_warning">"Verbindung zum Server getrennt. Nachrichten werden gesendet, sobald eine Online-Verbindung besteht."</string>
