--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"Guardar"</string>
     <string name="chat_with">"Chat con <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Yo"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> está conectado"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> está ausente"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> está ocupado"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> está desconectado"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> se ha unido al chat"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> se ha desconectado"</string>
-    <string name="time_stamp">"\"Enviado a las\" hh:mm \"el\" EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"Enviar"</string>
     <string name="msg_sent_failed">"No se ha podido enviar el mensaje."</string>
     <string name="disconnected_warning">"Se ha perdido la conexión con el servidor. Los mensajes se enviarán cuando se restablezca la conexión."</string>
