--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"Salva"</string>
     <string name="chat_with">"Conversazione con <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Io"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> è online"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> non è al computer"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> è occupato"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> è offline"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> è entrato"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> è uscito"</string>
-    <string name="time_stamp">"\'Inviato alle\' hh:mm a \'il\' EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"Invia"</string>
     <string name="msg_sent_failed">"Impossibile inviare il messaggio."</string>
     <string name="disconnected_warning">"Connessione al server persa. I messaggi saranno inviati quando verrà ristabilita."</string>
