--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"保存"</string>
     <string name="chat_with">"<xliff:g id="USER">%1$s</xliff:g>とチャット"</string>
     <string name="me">"自分"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g>さんはオンラインです"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g>さんは退席中です"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g>さんは取り込み中です"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g>さんはオフラインです"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g>さんが参加しました"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g>さんが退出しました"</string>
-    <string name="time_stamp">"EEEE \'の\' a hh:mm \'に送信\'"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"送信"</string>
     <string name="msg_sent_failed">"メッセージを送信できませんでした。"</string>
     <string name="disconnected_warning">"サーバーとの接続が失われました。オンラインになり次第メッセージを送信します。"</string>
