--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"Opslaan"</string>
     <string name="chat_with">"Chatten met <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Ik"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> is online"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> is afwezig"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> is bezet"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> is offline"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> is online gekomen"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> is weggegaan"</string>
-    <string name="time_stamp">"\'Verzonden om\' uu:mm a \'op\' EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"Verzenden"</string>
     <string name="msg_sent_failed">"Dit bericht kan niet worden verzonden."</string>
     <string name="disconnected_warning">"Verbinding met de server is verbroken. Berichten worden verzonden wanneer u online bent."</string>
