--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"Сохранить"</string>
     <string name="chat_with">"Чат: <xliff:g id="USER">%1$s</xliff:g>"</string>
     <string name="me">"Я"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> в сети"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> отсутствует"</string>
     <string name="contact_busy">"Пользователь <xliff:g id="USER">%1$s</xliff:g> занят"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> не в сети"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> в чате"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> не в чате"</string>
-    <string name="time_stamp">"\"Отправлено в\" чч:мм EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"Отправить"</string>
     <string name="msg_sent_failed">"Не удалось отправить сообщение."</string>
     <string name="disconnected_warning">"Подключение к серверу прервано. Сообщения будут отправлены при подключении к Интернету."</string>
