--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -90,13 +90,16 @@
     <string name="save">"儲存"</string>
     <string name="chat_with">"與 <xliff:g id="USER">%1$s</xliff:g> 交談"</string>
     <string name="me">"我"</string>
+    <!-- no translation found for compose_hint (1735533889811320962) -->
+    <skip />
     <string name="contact_online">"<xliff:g id="USER">%1$s</xliff:g> 在線上"</string>
     <string name="contact_away">"<xliff:g id="USER">%1$s</xliff:g> 顯示離開"</string>
     <string name="contact_busy">"<xliff:g id="USER">%1$s</xliff:g> 目前忙碌"</string>
     <string name="contact_offline">"<xliff:g id="USER">%1$s</xliff:g> 顯示離線"</string>
     <string name="contact_joined">"<xliff:g id="USER">%1$s</xliff:g> 加入交談"</string>
     <string name="contact_left">"<xliff:g id="USER">%1$s</xliff:g> 已離開"</string>
-    <string name="time_stamp">"hh:mm [傳送] 一個 [on] EEEE"</string>
+    <!-- no translation found for time_stamp (8952691401963972802) -->
+    <skip />
     <string name="send">"傳送"</string>
     <string name="msg_sent_failed">"訊息無法傳送。"</string>
     <string name="disconnected_warning">"與伺服器連線中斷。您的訊息將在下次登入時傳送。"</string>
